syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/adamdb5/opennord/pb";

package pb;

// * = Not supported by Daemon
service Daemon {
  rpc AccountInfo (google.protobuf.Empty) returns (AccountResponse) {}             // Implemented
  rpc Cities (CitiesRequest) returns (CitiesResponse) {}                           // Implemented
  rpc Connect (ConnectRequest) returns (stream ConnectResponse) {}                 // Implemented
  rpc Countries (CountriesRequest) returns (CountriesResponse) {}                  // Implemented
  rpc Disconnect (DisconnectRequest) returns (Payload) {}                          // Implemented
  rpc FrontendCountries (CountriesRequest) returns (FrontendCountriesResponse) {}  // Implemented
  rpc Groups (GroupsRequest) returns (GroupsResponse) {}                           // Implemented
  rpc IsLoggedIn (google.protobuf.Empty) returns (IsLoggedInResponse) {}           // Implemented
  rpc Login (LoginRequest) returns (Payload) {}                                    // Implemented
  rpc LoginOAuth2 (google.protobuf.Empty) returns (LoginOAuth2Response) {}         // Implemented
  rpc LoginOAuth2Callback (google.protobuf.Empty) returns (Payload) {}             // Not Implemented
  rpc Logout (google.protobuf.Empty) returns (Payload) {}                          // Implemented
  rpc Plans (google.protobuf.Empty) returns (PlansResponse) {}                     // Implemented
  rpc Ping (google.protobuf.Empty) returns (Payload) {}                            // Implemented
  rpc RateConnection (RateConnectionRequest) returns (Payload) {}                  // Implemented
  rpc Register (RegisterRequest) returns (Payload) {}                              // Not Implemented*
  rpc SetAutoConnect (SetAutoConnectRequest) returns (Payload) {}                  // Implemented
  rpc SetCyberSec (SetCyberSecRequest) returns (Payload) {}                        // Implemented
  rpc SetDefaults (google.protobuf.Empty) returns (Payload) {}                     // Implemented
  rpc SetDns (SetDNSRequest) returns (Payload) {}                                  // Implemented
  rpc SetFirewall (SetGenericRequest) returns (Payload) {}                         // Implemented
  rpc SetIpv6 (SetGenericRequest) returns (Payload) {}                             // Implemented
  rpc SetKillSwitch (SetKillSwitchRequest) returns (Payload) {}                    // Implemented
  rpc SetNotify (SetNotifyRequest) returns (Payload) {}                            // Implemented*
  rpc SetObfuscate (SetGenericRequest) returns (Payload) {}                        // Implemented
  rpc SetProtocol (SetProtocolRequest) returns (Payload) {}                        // Implemented
  rpc SetTechnology (SetTechnologyRequest) returns (Payload) {}                    // Implemented
  rpc SetWhitelist (SetWhitelistRequest) returns (Payload) {}                      // Implemented
  rpc Settings (google.protobuf.Empty) returns (SettingsResponse) {}               // Implemented*
  rpc SettingsProtocols (google.protobuf.Empty) returns (ProtocolsResponse) {}     // Implemented
  rpc SettingsTechnologies (google.protobuf.Empty) returns (TechnologyResponse) {} // Implemented
  rpc Status (google.protobuf.Empty) returns (StatusResponse) {}                   // Implemented
}

message AccountResponse { /* USED */
  uint32 type = 1;
  // string username = 2; (Not used)
  string email = 3;
  string expiresAt = 4;
}

message CitiesRequest { /* USED */
  ProtocolEnum protocol = 1;
  bool obfuscate = 2;
  string country = 3;
}

message CitiesResponse { /* USED */
  uint32 type = 1;
  repeated string cities = 2;
}

message ConnectRequest { /* USED */
  string serverTag = 1;
  ProtocolEnum protocol = 5;
  bool obfuscate = 6;
  bool cyberSec = 7;
  // bool killSwitch = 8; (No effect)
  repeated string dns = 9;
  Whitelist whiteList = 10;
  // bool serverGroup = 8; (No effect)
  // string nordLynxPrivateKey = 9; (No effect)
}

message ConnectResponse { /* USED */
  uint32 type = 1;
  repeated string messages = 2;
}

message CountriesRequest { // USED
  ProtocolEnum protocol = 1;
  bool obfuscate = 2;
}

message CountriesResponse { // USED
  int32 type = 1;
  repeated string countries = 2;
}

message DisconnectRequest {// USED
  int32 id = 2;
}

message FrontendCountriesResponse { //USED
  repeated FrontendCountry countries = 1;
}

message FrontendCountry { // USED
  string name = 1;
  string code = 2;
}

message GroupsResponse {
  int32 type = 1;
  repeated string names = 2;
}
message GroupsRequest {
  ProtocolEnum protocol = 1;
  bool obfuscate = 2;
}

message IsLoggedInResponse { // USED
  bool isLoggedIn = 1;
}

message LoginOAuth2Response {
  string url = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LogoutRequest {
  int32 id = 2;
}

message Payload {
  int32 type = 1;
  repeated string data = 2;
}

message Plan {
  string name = 1;
  string description = 2;
  string cost = 3;
  string currency = 4;
}

message PlansResponse {
  uint32 type = 1;
  repeated Plan plans = 2;
}

message Ports {
  repeated int32 udp = 1;
  repeated int32 tcp = 2;
}

message ProtocolsResponse { // USED
  uint32 type = 1;
  repeated string protocols = 2;
}

message ServersListRequest {
  string protocol = 1;
  int32 count = 2;
  string serverTag = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RateConnectionRequest {
  int32 rating = 1;
}

message SetAutoConnectRequest {
  string serverTag = 4;
  ProtocolEnum protocol = 5;
  bool cyberSec = 7;
  bool obfuscate = 8;
  bool autoConnect = 9;
  repeated string dns = 10;
  Whitelist whitelist = 11;
}

message SetGenericRequest {
  bool enabled = 1;
}

message SetCyberSecRequest {
  bool cyberSec = 2;
}

message SetDNSRequest {
  repeated string dns = 2;
  bool cyberSec = 3;
}

message SetKillSwitchRequest {
  bool enabled = 2;
}

message SetNotifyRequest {
  uint32 uid = 2;
  bool notify = 3;
}

message SetProtocolRequest {
  ProtocolEnum protocol = 2;
}

message SetTechnologyRequest {
  TechnologyEnum technology = 2;
}

message SetWhitelistRequest {
  Whitelist whitelist = 2;
}

message SettingsResponse {
  uint32 type = 1;
  Settings settings = 2;
}

message Settings {
  TechnologyEnum technology = 1;
  bool firewall = 2;
  bool killSwitch = 3;
  bool autoConnect = 4;
  bool notify = 5;
  bool ipv6 = 6;
}

message StatusResponse {
  string state = 1;
  TechnologyEnum technology = 2;
  ProtocolEnum protocol = 3;
  string ip = 4;
  string hostname = 5;
  string country = 6;
  string city = 7;
  int64 download = 8;
  int64 upload = 9;
  int64 uptime = 10; // nanoseconds
}

message TechnologyResponse { // USED
  uint32 type = 1;
  repeated string technologies = 2;
}

message Whitelist {
  Ports ports = 1;
  repeated string subnets = 2;
}

// Enums
enum TechnologyEnum {
  UNKNOWN_TECHNOLOGY = 0;
  OPENVPN = 1;
  NORDLYNX = 2;
  // SKYLARK = 3; Exists in codebase, but is not implemented
}

enum ProtocolEnum {
  UNKNOWN_PROTOCOL = 0;
  UDP = 1;
  TCP = 2;
}